add baseline for the template